// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatPullRequests: Expect basic PR to match snapshot 1`] = `
[
  {
    'additions': 0,
    'age': 1,
    'approvals': 0,
    'approvers': {},
    'author': 'AUTHOR',
    'changedFiles': 0,
    'codeCommenters': {},
    'codeComments': 0,
    'commenters': {},
    'comments': 0,
    'createdAt': '',
    'deletions': 0,
    'generalCommenters': {},
    'generalComments': 0,
    'mergedAt': '',
    'org': 'ORG',
    'prSize': 0,
    'repo': 'REPO',
    'url': '',
  },
]
`;

exports[`formatPullRequests: Expect basic PR values to be correct 1`] = `
[
  {
    'additions': 100,
    'age': 2,
    'approvals': 0,
    'approvers': {},
    'author': 'AUTHOR',
    'changedFiles': 10,
    'codeCommenters': {},
    'codeComments': 0,
    'commenters': {},
    'comments': 0,
    'createdAt': '1999-12-31',
    'deletions': 100,
    'generalCommenters': {},
    'generalComments': 0,
    'mergedAt': '2000-01-02',
    'org': 'ORG',
    'prSize': 200,
    'repo': 'REPO',
    'url': 'URL',
  },
]
`;

exports[`formatPullRequests: Expect comments and approvals to be formatted correctly 1`] = `
[
  {
    'additions': 0,
    'age': 1,
    'approvals': 1,
    'approvers': {
      'FRANK': 1,
    },
    'author': 'AUTHOR',
    'changedFiles': 0,
    'codeCommenters': {
      'BILL': 2,
    },
    'codeComments': 2,
    'commenters': {
      'BILL': 2,
      'BOB': 1,
    },
    'comments': 3,
    'createdAt': '',
    'deletions': 0,
    'generalCommenters': {
      'BOB': 1,
    },
    'generalComments': 1,
    'mergedAt': '',
    'org': 'ORG',
    'prSize': 0,
    'repo': 'REPO',
    'url': '',
  },
]
`;
